Small fixes to out of bounds movie cards

--- a/src/app.css
+++ b/src/app.css
@@ -73,7 +73,7 @@
   }
 
   p, button, label, ul {
-    font-size: clamp(1rem, 1vw + 0.5rem, 1.25rem);
+    font-size: clamp(0.875rem, 1vw + 0.5rem, 1.25rem);
   }
 
   h1 {
